# thunder-dedupe

./: .gitignore  README.md  build.bat  build.md  pyproject.toml  requirements.txt
extension/: create_icons.py
extension/chrome/: background.js  content.js  manifest.json
extension/chrome/popup/: options.html  options.js  popup.html  popup.js
extension/edge/: background.js  content.js  manifest.json
extension/edge/popup/: options.html  options.js  popup.html  popup.js
hooks/: hook-sqlite3.py
runtime_hooks/: pyi_rth_sqlite3.py
src/: diagnose.py  main.py  test_parse.py  test_user_files.py
src/core/: __init__.py  av_parser.py  clipboard_monitor.py  directory_scanner.py  file_history_scanner.py  index_manager.py
src/db/: database.py  models.py
src/db/migrations/: __init__.py  init_db.py
src/network/: __init__.py  websocket_server.py
src/ui/: config_page.py  console_page.py  duplicate_page.py  file_history_page.py  file_list_page.py  home_page.py  main_window.py  rule_page.py
src/ui/dialogs/: __init__.py  decision_popup.py
src/utils/: config.py  logger.py  single_instance.py  utils.py
